Convert URL to URI example